--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Delta Omega Nu</title>
+    </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>VOTE LUKE HEINRICHS FOR TECH CHAIR</h1>
+<p>I promise to maintain a quality website and maintain regular changes as events happen in the academic school year!</p>
 </body>
 </html>
